--- a/docs/CSS/mystyle.css
+++ b/docs/CSS/mystyle.css
@@ -1,4 +1,4 @@
-html {  background-image: url("../images/wallpaper.png");
+html {  background-image: url("../Images/wallpaper.png");
         background-attachment: fixed;
         background-repeat: no-repeat;    
 }
